operator/utils/k8s/testdata/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seldon
    app.kubernetes.io/instance: seldon1
    app.kubernetes.io/name: seldon
    app.kubernetes.io/version: v0.5
  name: seldon-webhook-service
  namespace: seldon-system
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: seldon
    app.kubernetes.io/instance: seldon1
    app.kubernetes.io/name: seldon
    app.kubernetes.io/version: v0.5
    control-plane: seldon-controller-manager
