operator/utils/k8s/testdata/mutate.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: 'default/seldon-serving-cert'
  creationTimestamp: null
  labels:
    app: seldon
    app.kubernetes.io/instance: 'seldon-operator'
    app.kubernetes.io/name: 'seldon-core-operator'
  name: seldon-mutating-webhook
webhooks:
- clientConfig:
    caBundle: 'LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZDJ1eWJ1aVEzN2l0Lys0aTQ4NWQ2akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNREF5TWpreE5USXdNelJhRncweQpNVEF5TWpneE5USXdNelJhTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXViMHdrTnlXQjdsR3QzQkE1QTAwbGg4bFY2RFEKOEE1YUlyS2tjelV5azNQZ2c5b0Y1OFhPQlUzVDNqeDlCMU1UemloK1I0UXVFaFdvNVFlUlRDVGJRcWRlUUlrMgpnbWZRU0hxSXhVW [...]
    service:
      name: seldon-webhook-service
      namespace: 'default'
      path: /mutate-machinelearning-seldon-io-v1-seldondeployment
  failurePolicy: Fail
  name: v1.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
- clientConfig:
    caBundle: 'LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZDJ1eWJ1aVEzN2l0Lys0aTQ4NWQ2akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNREF5TWpreE5USXdNelJhRncweQpNVEF5TWpneE5USXdNelJhTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXViMHdrTnlXQjdsR3QzQkE1QTAwbGg4bFY2RFEKOEE1YUlyS2tjelV5azNQZ2c5b0Y1OFhPQlUzVDNqeDlCMU1UemloK1I0UXVFaFdvNVFlUlRDVGJRcWRlUUlrMgpnbWZRU0hxSXhVW [...]
    service:
      name: seldon-webhook-service
      namespace: 'default'
      path: /mutate-machinelearning-seldon-io-v1alpha2-seldondeployment
  failurePolicy: Fail
  name: v1alpha2.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
- clientConfig:
    caBundle: 'LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCRENDQWV5Z0F3SUJBZ0lRZDJ1eWJ1aVEzN2l0Lys0aTQ4NWQ2akFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNREF5TWpreE5USXdNelJhRncweQpNVEF5TWpneE5USXdNelJhTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXViMHdrTnlXQjdsR3QzQkE1QTAwbGg4bFY2RFEKOEE1YUlyS2tjelV5azNQZ2c5b0Y1OFhPQlUzVDNqeDlCMU1UemloK1I0UXVFaFdvNVFlUlRDVGJRcWRlUUlrMgpnbWZRU0hxSXhVW [...]
    service:
      name: seldon-webhook-service
      namespace: 'default'
      path: /mutate-machinelearning-seldon-io-v1alpha3-seldondeployment
  failurePolicy: Fail
  name: v1alpha3.mseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
